# cexdemo

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
macher/: Cargo.toml
macher/src/: kafka_consumer.rs  kafka_producer.rs  main.rs  matcher.rs
migrations/: 01_init.sql
server/: Cargo.toml
server/src/: db.rs  handlers.rs  kafka_producer.rs  main.rs
settlement/: Cargo.toml
settlement/src/: db.rs  kafka_consumer.rs  main.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  models.rs
shared/src/entity/: balance.rs  mod.rs  order.rs
