[workspace]
members = [
    "shared",
    "server",
    "macher",
    "settlement",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.35", features = ["serde-float"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-rust_decimal"] }
sea-orm-migration = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }

